--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/me-vue-ui/favicon.ico"><title>meui-vue</title><link href="/me-vue-ui/js/about.217431da.js" rel="prefetch"><link href="/me-vue-ui/js/chunk-2d230521.53f0f5bd.js" rel="prefetch"><link href="/me-vue-ui/css/index.06df38be.css" rel="preload" as="style"><link href="/me-vue-ui/js/chunk-vendors.496c575d.js" rel="preload" as="script"><link href="/me-vue-ui/js/index.882ea7e8.js" rel="preload" as="script"><link href="/me-vue-ui/css/index.06df38be.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but meui-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/me-vue-ui/js/chunk-vendors.496c575d.js"></script><script src="/me-vue-ui/js/index.882ea7e8.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>
+    Development
+  </title>
+<link rel="icon" href="favicon.ico"><script defer src="bundle.js"></script></head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but Development doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
+</html>
